--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                         <div>
                             <ul>
                                 <div id="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a>
+                                    <a class="navbar-brand" href="index.html"><img alt="Secure Multi-party Computation Forum-2019" src="image/logo.png"></a>
                                 </div>
                                 <div id="besides-footer">
                                     <nav id="main-nav" name="main-nav">
                                         <ul>
                                         <li><a href="index.html">
-                                            <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
-                                            <li><a href="introduction.html">会议介绍</a></li>
-                                            <li><a href="about.html">注册参会</a></li>
-                                            <li><a href="TeamWeb-English/index.html">ENGLISH</a></li>
+                                            <i class="fa fa-home fa-1x" aria-hidden="true"></i> Home</a></li>
+                                            <li><a href="introduction.html">Introduction</a></li>
+                                            <li><a href="about.html">Join in</a></li>
+                                            <li><a href="../index.html">Chinese</a></li>
                                         </ul>
                                     </nav>
                                 <!--
@@ -46,10 +46,10 @@
         </header>        
         <div class="container">
             <div id="main">
-                <p>安全多方计算国际论坛-2019</p>
+                <p>Secure Multi-party Computation Forum-2019</p>
                 <p>[1/6/2019 - 2/6/2019]</p>
-                <p>浙江省杭州市浙大路38号·浙江大学玉泉校区</p>
-                <a href="https://www.google.cn/maps/place/Zhejiang+University/@30.2643596,120.1186262,15.65z/data=!4m5!3m4!1s0x344b62e59347d573:0xc71a5f36936f81a0!8m2!3d30.263944!4d120.123279">
+                <p>38 Zheda Rd, Xihu Qu, Hangzhou Shi, Zhejiang Sheng, China</p>
+                <a href="https://www.google.com/maps/place/Zhejiang+University/@30.263944,120.123279,15z/data=!4m5!3m4!1s0x0:0xc71a5f36936f81a0!8m2!3d30.263944!4d120.123279">
                     <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
                 </a>
                 
