--- a/about.html
+++ b/about.html
@@ -26,16 +26,16 @@
                         <div>
                             <ul>
                                 <div id="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a>
+                                    <a class="navbar-brand" href="index.html"><img alt="Secure Multi-party Computation Forum-2019" src="image/logo.png"></a>
                                 </div>
                                 <div id="besides-footer">
                                     <nav id="main-nav" name="main-nav">
                                         <ul>
                                             <li><a href="index.html">
-                                                <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
-                                            <li><a href="introduction.html">会议介绍</a></li>
-                                            <li><a href="about.html">注册参会</a></li>
-                                            <li><a href="TeamWeb-English/about.html">ENGLISH</a></li>
+                                                <i class="fa fa-home fa-1x" aria-hidden="true"></i>Home</a></li>
+                                            <li><a href="introduction.html">Introduction</a></li>
+                                            <li><a href="about.html">Join in</a></li>
+                                            <li><a href="../about.html">Chinese</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -46,8 +46,9 @@
         </header>    
     </div>
     <div id="main2" >
+        <!--
         <div id="register">
-                <h2 class="title "><b>注册信息</b></h2>
+                <h2 class="title "><b>Registration Information</b></h2>
                     <p>每人1500元，可通过网银转账、银行汇款方式缴纳。<br/>
     
                             网银转账、银行汇款收款人信息如下：<br/>
@@ -59,29 +60,29 @@
                             开户行：中国银行浙大支行<br/>
                             
                             账号：<b>377 958 327 225</b></p>
-        </div>
+        </div>-->
         <div id="stay-info">
-            <h2 class="title"><b>住宿信息</b></h2>
-            <p>本次论坛为所有邀请报告人提供住宿以及往返机票。<br/>
-                所邀请报告人将居住在浙江世贸
-                <a href="https://www.google.cn/maps/place/Zhejiang+Narada+Grand+Hotel/@30.265754,120.1384123,17z/data=!3m1!4b1!4m5!3m4!1s0x344b628dca7f2211:0x17322478b872549!8m2!3d30.265754!4d120.140601
-                ">君澜大饭店</a>
-                ，其他自行参会者可以选择
-                <a href="https://www.google.cn/maps/place/Yuquan+Hotel/@30.25931,120.1233353,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e861cb5fd3:0xd27d4eae06cbaa12!8m2!3d30.25931!4d120.125524
-                ">玉泉饭店</a>
-                和
-                <a href="https://www.google.cn/maps/place/%E7%81%B5%E5%B3%B0%E5%B1%B1%E5%BA%84/@30.260165,120.1236463,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e8ec4d88f5:0x893252db7ac4d6c3!8m2!3d30.260165!4d120.125835
-                ">灵峰山庄</a>。
+            <h2 ><b>Accomodation Information</b></h2>
+            <p>The forum will provide accommodation and round-trip tickets for all the invited speakers<br/>
+                The speakers will live in 
+                <a href="https://www.google.com/maps/place/Zhejiang+Narada+Grand+Hotel/@30.265754,120.140601,15z/data=!4m5!3m4!1s0x0:0x17322478b872549!8m2!3d30.265754!4d120.140601
+                ">Zhejiang Shimao Junlan Hotel</a>,
+               Others can choose
+                <a href="https://www.google.com/maps/place/Yuquan+Hotel/@30.2593146,120.1233353,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e861cb5fd3:0xd27d4eae06cbaa12!8m2!3d30.25931!4d120.125524
+                ">Yuquan Hotel</a>
+                and
+                <a href="https://www.google.com/maps/place/%E7%81%B5%E5%B3%B0%E5%B1%B1%E5%BA%84/@30.260165,120.125835,15z/data=!4m5!3m4!1s0x0:0x893252db7ac4d6c3!8m2!3d30.260165!4d120.125835
+                ">Lingfeng Villa</a>.
             </p>
         </div>
         <div id="participation-method" name="method"> 
-                <h2 class="title "><b>联系方式</b></h2>
+                <h2 class="title "><b>Contact</b></h2>
                 <!--<img src="image/-two-dimension-code.png" id="two-dc">
                 <p>微信扫一扫加入参会群</p>-->
                 <p>
-                    论坛联系人：蒋林智<br/>
-                    联系电话：18180453935 <br/>
-                    邮箱：linzjiang(#)hotmail(dot)com
+                    Linzhi Jiang<br/>
+                    Tel：+8618180453935 <br/>
+                    Email：linzjiang(#)hotmail(dot)com
                     <br/>
                 </p>
             </div>
