--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                             <li><a href="introduction.html">会议介绍</a></li>
                                             <li><a href="about.html">注册参会</a></li>
 <!--                                             <li><a href="English/index.html">ENGLISH</a></li> -->
-                                            <li><a href="#">ENGLISH</a></li>
+                                            <li><a>ENGLISH</a></li>
                                         </ul>
                                     </nav>
                                 <!--
