--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
     <div id="main2" >
         <div id="register">
                 <h2 class="title "><b>注册信息</b></h2>
-                    <p>注册费：1500元/人，可通过网银转账、银行汇款方式缴纳。<br/>
+                    <p>注册费：1500元/人，自行参会人员食宿自理，可通过网银转账、银行汇款方式缴纳。<br/>
     
                             网银转账、银行汇款收款人信息如下：<br/>
                             
