--- a/about.html
+++ b/about.html
@@ -35,7 +35,8 @@
                                                 <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
                                             <li><a href="introduction.html">会议介绍</a></li>
                                             <li><a href="about.html">注册参会</a></li>
-                                            <li><a href="English/about.html">ENGLISH</a></li>
+<!--                                             <li><a href="English/about.html">ENGLISH</a></li> -->
+                                            <li><a>ENGLISH</a></li>
                                         </ul>
                                     </nav>
                                 </div>
