--- a/introduction.html
+++ b/introduction.html
@@ -127,7 +127,7 @@
                     <p class="col-md-4">Bo Luo ( University of Kansas )</p>
                    
                 Qiang Tang &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ( New Jersey Institute of Technology )<br/>
-                Qazuo Otha &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ( University of Electro Communications )<br/>
+                Kazuo Otha &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ( University of Electro Communications )<br/>
                 XiaoFeng Wang &nbsp; &nbsp; ( Indiana University Bloomington )<br/>
                 Robert H.Deng &nbsp; &nbsp; ( Singapore Management University )<br/>
                 Yaochu Jin &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;( University of Surrey )<br/>
