--- a/introduction.html
+++ b/introduction.html
@@ -84,7 +84,7 @@
                     <td>( New Jersey Institute of Technology )</td>
                 </tr>
                 <tr>
-                    <td>kazuo Otha</td>
+                    <td>Kazuo Otha</td>
                     <td>( University of Electro Communications )</td> 
                 </tr>
                 <tr>
