--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="https://www.google.cn/maps/place/Zhejiang+University/@30.2643596,120.1186262,15.65z/data=!4m5!3m4!1s0x344b62e59347d573:0xc71a5f36936f81a0!8m2!3d30.263944!4d120.123279">
                     <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
                 </a>
-                <p>会议地点：浙大邵逸夫科学馆</p>
+<!--                 <p>会议地点：浙大邵逸夫科学馆</p> -->
             </div>
             <div id="icon-down" class="icon-down">
                 <a id="down"   href="introduction.html">
