--- a/index.html
+++ b/index.html
@@ -2,58 +2,54 @@
 <html lang="zh-CN" >
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale= 1.0 maximum-scale=1.0 user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <!--
+    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
     <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-    <script src="dist/js/jquery.min.js" ></script>
-    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="dist/css/bootstrap.css" rel="stylesheet">
-    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    -->
+    <script src="https://cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" media="screen" >
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <title>安全多方计算国际论坛2019</title>
 </head>
 <body>
     <div >
-         <header style="min-height: 76px;">
+        <header style="min-height: 76px;">
                 <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
                     <div class="container">
-                        <div>
-                            <ul>
-                                <div id="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a>
-                                </div>
-                                <div id="besides-footer">
-                                    <nav id="main-nav" name="main-nav">
-                                        <ul>
-                                        <li><a href="index.html">
-                                            <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
-                                            <li><a href="introduction.html">会议介绍</a></li>
-                                            <li><a href="about.html">注册参会</a></li>
-<!--                                             <li><a href="English/index.html">ENGLISH</a></li> -->
-                                            <li><a>ENGLISH</a></li>
-                                        </ul>
-                                    </nav>
-                                <!--
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                                <span class="sr-only">切换导航</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a>
+                        </div>
+                        <div id="navbar-collapse" class="collapse navbar-collapse">
+                            <ul class="nav navbar-nav navbar-right">
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
                                     <li><a href="introduction.html">会议介绍</a></li>
-                                     <li><a href="about.html">注册加入</a></li>-->
+                                    <li><a href="about.html">注册参会</a></li>
+                                    <li><a href="#">ENGLISH</a></li>
                             </ul>
                         </div>
-                    </div><!-- /.container-->
+                    </div><!-- TeamWeb-English/index.html-->
                 </nav>
         </header>        
         <div class="container">
             <div id="main">
                 <p>安全多方计算国际论坛-2019</p>
                 <p>[1/6/2019 - 2/6/2019]</p>
-                <p>浙江省杭州市浙大路38号·浙江大学玉泉校区</p>
-                <a href="https://www.google.cn/maps/place/Zhejiang+University/@30.2643596,120.1186262,15.65z/data=!4m5!3m4!1s0x344b62e59347d573:0xc71a5f36936f81a0!8m2!3d30.263944!4d120.123279">
+                <p>浙江省杭州市浙大路38号·浙江大学玉泉校区<br/>邵逸夫科学馆</p>
+                <a href="https://j.map.baidu.com/b0ZKP">
                     <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
                 </a>
-<!--                 <p>会议地点：浙大邵逸夫科学馆</p> -->
             </div>
             <div id="icon-down" class="icon-down">
                 <a id="down"   href="introduction.html">
@@ -64,8 +60,6 @@
     </div>    
     <script>
         let iconDown=document.getElementById('icon-down');
-        let //down=document.getElementById('down'),
-            introdution=document.getElementById('introduction');
             //跨浏览器兼容事件处理器
         var addHandler=function(element,type,handler){
             if(addEventListener){
