--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                 </tbody>
                 <caption>住宿信息</caption>
                 <tbody class="table">
-                    <tr><td>本次论坛为所有邀请报告人提供住宿以及往返机票/高铁票报销。</td></tr>
+                    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本次论坛为所有邀请报告人提供住宿以及往返机票/高铁票报销。</td></tr>
                     <tr>
                         <td>所邀请报告人将居住在浙江世贸
                             <a href="https://www.google.cn/maps/place/Zhejiang+Narada+Grand+Hotel/@30.265754,120.1384123,17z/data=!3m1!4b1!4m5!3m4!1s0x344b628dca7f2211:0x17322478b872549!8m2!3d30.265754!4d120.140601
@@ -110,6 +110,11 @@
                             <td>论坛注册邮箱：
                             linzjiang(#)hotmail(dot)com</td>
                         </tr>
+                        <tr>
+                            <td>
+                                账号：<b>377 958 327 225</b>
+                            </td>
+                            </tr>
                     </tbody>
                 </tbody>
             </table>
