--- a/about.html
+++ b/about.html
@@ -67,8 +67,14 @@
                         <td>税 &nbsp; &nbsp;&nbsp;&nbsp;号：
                         9133 0104 7368 6237 57</td>
                     </tr>
+                    
                     <tr>
                         <td>开户银行：中国银行浙大支行</td>
+                    </tr>
+                    <tr>
+                         <td>
+                             账 &nbsp; &nbsp;&nbsp;&nbsp; 号：<b>377 958 327 225</b>
+                         </td>
                     </tr>
                     <tr>
                         
@@ -110,11 +116,7 @@
                             <td>论坛注册邮箱：
                             linzjiang(#)hotmail(dot)com</td>
                         </tr>
-                        <tr>
-                            <td>
-                                账号：<b>377 958 327 225</b>
-                            </td>
-                            </tr>
+
                     </tbody>
                 </tbody>
             </table>
