--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
                     </caption>
                     <tbody class="table">
                         <tr>
-                            <td>论坛联系人：
+                            <td>论 &nbsp; 坛 &nbsp; 联 &nbsp; 系 &nbsp; 人：
                             蒋林智</td>
                         </tr>
                         <tr>
