--- a/about.html
+++ b/about.html
@@ -88,18 +88,23 @@
                     <tr>
                         <td>所邀请报告人将居住在浙江世贸
                             <a href="https://www.google.cn/maps/place/Zhejiang+Narada+Grand+Hotel/@30.265754,120.1384123,17z/data=!3m1!4b1!4m5!3m4!1s0x344b628dca7f2211:0x17322478b872549!8m2!3d30.265754!4d120.140601
-                            ">君澜大饭店</a>，
+                            ">君澜大饭店</a>，其他自行参会者可以选择
+                        <a href="https://www.google.cn/maps/place/Yuquan+Hotel/@30.25931,120.1233353,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e861cb5fd3:0xd27d4eae06cbaa12!8m2!3d30.25931!4d120.125524
+                        ">玉泉饭店</a>
+                        和
+                        <a href="https://www.google.cn/maps/place/%E7%81%B5%E5%B3%B0%E5%B1%B1%E5%BA%84/@30.260165,120.1236463,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e8ec4d88f5:0x893252db7ac4d6c3!8m2!3d30.260165!4d120.125835
+                       ">灵峰山庄</a>。
                         </td>
                         
                     </tr>
-                    <tr><td>其他自行参会者可以选择
+<!--                     <tr><td>其他自行参会者可以选择
                         <a href="https://www.google.cn/maps/place/Yuquan+Hotel/@30.25931,120.1233353,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e861cb5fd3:0xd27d4eae06cbaa12!8m2!3d30.25931!4d120.125524
                         ">玉泉饭店</a>
                         和
                         <a href="https://www.google.cn/maps/place/%E7%81%B5%E5%B3%B0%E5%B1%B1%E5%BA%84/@30.260165,120.1236463,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e8ec4d88f5:0x893252db7ac4d6c3!8m2!3d30.260165!4d120.125835
                        ">灵峰山庄</a>。
                     </td>
-                    </tr>
+                    </tr> -->
                     <caption>
                             联系方式
                     </caption>
