--- a/about.html
+++ b/about.html
@@ -84,15 +84,15 @@
                 <table class="table">
                 <caption>住宿信息</caption>
                 <tbody >
-                    <tr  style="width: 90%"><td> &nbsp; &nbsp;&nbsp;&nbsp; 本次论坛为所有邀请报告人提供住宿以及往返机票/高铁票报销。</td></tr>
+                    <tr  style="width: 90%"><td> &nbsp; &nbsp; &nbsp;本次论坛为所有邀请报告人提供住宿以及往返机票/高铁票报销。</td></tr>
                     <tr>
                         <td>所邀请报告人将居住在浙江世贸
                             <a href="https://www.google.cn/maps/place/Zhejiang+Narada+Grand+Hotel/@30.265754,120.1384123,17z/data=!3m1!4b1!4m5!3m4!1s0x344b628dca7f2211:0x17322478b872549!8m2!3d30.265754!4d120.140601
-                            ">君澜大饭店</a>，其他自行参会者可以
+                            ">君澜大饭店</a>，其他自行参会者可
                         </td>
                         
                     </tr>
-                    <tr><td>选择
+                    <tr><td>以选择
                         <a href="https://www.google.cn/maps/place/Yuquan+Hotel/@30.25931,120.1233353,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e861cb5fd3:0xd27d4eae06cbaa12!8m2!3d30.25931!4d120.125524
                         ">玉泉饭店</a>
                         和
