--- a/about.html
+++ b/about.html
@@ -75,7 +75,9 @@
                         <td>账 &nbsp; &nbsp;&nbsp;&nbsp; 号：</td>
                         <td>377 958 327 225</td>
                     </tr>
-                    
+                    <tr>
+                        注：参会人员填写下发票抬头和税号，打款时备注下此会议名称，开具纸质发票，在报到的时候发给参会人员。
+                    </tr>
                 </tbody>
                 </table>
                 <table class="table">
