--- a/about.html
+++ b/about.html
@@ -76,7 +76,8 @@
                         <td>377 958 327 225</td>
                     </tr>
                     <tr>
-                        <td>注：参会人员填写下发票抬头和税号，打款时备注下此会议名称，开具纸质发票，在报到的时候发给参会人员。</td>
+                        <td>注：</td>
+                        <td>参会人员填写下发票抬头和税号，打款时备注下此会议名称，开具纸质发票，在报到的时候发给参会人员。</td>
                     </tr>
                 </tbody>
                 </table>
