--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                     </tr>
                     <tr>
                         <td>注：</td>
-                        <td>参会人员填写下发票抬头和税号，打款时备注下此会议名称，开具纸质发票，在报到的时候发给参会人员。</td>
+                        <td>请参会人员填写下发票抬头和税号，打款时备注下此会议名称，开具纸质发票，在报到的时候发给参会人员。已经注册的老师，请联系会务公司辛总:辛鹏艳13757158982。联系发票开取事务。</td>
                     </tr>
                 </tbody>
                 </table>
