--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                     </tr>
                     <tr>
                         <td>注：</td>
-                        <td>请参会人员填写下发票抬头和税号，打款时备注下此会议名称，开具纸质发票，在报到的时候发给参会人员。已经注册的老师，请联系会务公司辛总:辛鹏艳13757158982。联系发票开取事务。</td>
+                        <td>请参会人员填写发票抬头和税号，打款时备注此会议名称，开具纸质发票，在报到的时候发给参会人员。已经注册的老师，请联系会务公司辛总:辛鹏艳13757158982。联系发票开取事务。</td>
                     </tr>
                 </tbody>
                 </table>
@@ -116,15 +116,15 @@
                     <tbody >
                         <tr>
                             <td style="width: 40%">论坛联系人：</td>
-                            <td>蒋林智</td>
+                            <td>齐老师</td>
                         </tr>
                         <tr>
-                            <td style="width: 50%">论坛注册联系电话：</td>
-                            <td>18180453935</td>
+                            <td style="width: 50%">办公室电话：</td>
+                            <td>0571-87951559</td>
                         </tr>
                         <tr>
                             <td style="width: 40%">论坛注册邮箱：</td>
-                            <td>linzjiang(#)hotmail(dot)com</td>
+                            <td>Tiffanyqi371@zju.edu.cn</td>
                         </tr>
                     </tbody>
                 </tbody>
