--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <caption>注册信息</caption>
                 <tbody>
                     <tr >
-                        <td >注册费用：</td><td>1500元/人，自行参会人员食宿自理。可通过网银转账、银行汇款方式缴纳</td>
+                        <td >注册费用：</td><td>1500元/人，自行参会人员食宿自理。可通过网银转账、银行汇款方式缴纳。</td>
                     </tr>
                     
 
@@ -76,8 +76,7 @@
                         <td>377 958 327 225</td>
                     </tr>
                     <tr>
-                        <td clospan="2">注：</td>
-                        <td>请参会人员填写发票抬头和税号，打款时备注此会议名称，开具纸质发票，在报到的时候发给参会人员。已经注册的老师，请联系会务公司辛总:辛鹏艳13757158982。联系发票开取事务。</td>
+                        <td clospan="2">注：请参会人员填写发票抬头和税号，打款时备注此会议名称，开具纸质发票，在报到的时候发给参会人员。已经注册的老师，请联系会务公司辛总(辛鹏艳):13757158982。联系发票开取事务。</td>
                     </tr>
                 </tbody>
                 </table>
