--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                         <td>377 958 327 225</td>
                     </tr>
                     <tr>
-                        <td clospan="2">注：请参会人员填写发票抬头和税号，打款时备注此会议名称，开具纸质发票，在报到的时候发给参会人员。已经注册的老师，请联系会务公司辛总(辛鹏艳):13757158982。联系发票开取事务。</td>
+                        <td colspan="2">注：请参会人员填写发票抬头和税号，打款时备注此会议名称，开具纸质发票，在报到的时候发给参会人员。已经注册的老师，请联系会务公司辛总(辛鹏艳):13757158982。联系发票开取事务。</td>
                     </tr>
                 </tbody>
                 </table>
