--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                         <td>377 958 327 225</td>
                     </tr>
                     <tr>
-                        <td colspan="2">注：请参会人员填写发票抬头和税号，打款时备注此会议名称，开具纸质发票，在报到的时候发给参会人员。已注册的老师，请联系齐老师，咨询发票开取事务。</td>
+                        <td colspan="2">注：请参会人员填写发票抬头和税号，打款时备注此会议名称，财务开具纸质发票，在报到的时候发给参会人员。已注册的老师，请联系齐老师，咨询发票开取事务。</td>
                     </tr>
                 </tbody>
                 </table>
@@ -114,7 +114,7 @@
                     </caption>
                     <tbody >
                         <tr>
-                            <td style="width: 40%">论坛联系人：</td>
+                            <td style="width: 40%">论坛注册联系人：</td>
                             <td>齐老师</td>
                         </tr>
                         <tr>
