--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                 </div>-->
                 <table class="table table3">
                     <caption>
-                            联系方式
+                            论坛注册联系方式
                     </caption>
                     <tbody >
                         <tr>
