--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
         </div>
         <div id="participation-method" name="method"> 
             <!--
-                联系方式
+                论坛注册联系方式
                 <p>
                     论坛联系人：蒋林智<br/>
                     联系电话：18180453935 <br/>
