--- a/about.html
+++ b/about.html
@@ -76,12 +76,12 @@
                         <td>377 958 327 225</td>
                     </tr>
                     <tr>
-                        <td colspan="2">注：请参会人员填写发票抬头和税号，打款时备注此会议名称，财务开具纸质发票，在报到的时候发给参会人员。已注册的老师，请联系齐老师，咨询发票开取事务。<a href="https://www.wjx.top/jq/36776244.aspx">PC端注册请点击</a>。</td>
+                        <td colspan="2">注：请参会人员填写发票抬头和税号，打款时备注此会议名称，财务开具纸质发票，在报到的时候发给参会人员。已注册的老师，请联系齐老师，咨询发票开取事务。<a href="https://www.wjx.top/jq/36776244.aspx">点击进入注册</a>。</td>
                     </tr>
                     <tr style="text-align:center">
                        <td colspan="2">
                         <img src="./image/zhuce.png"><br>
-                        手机也可扫描二维码进行注册
+                        也可用手机扫描二维码进行注册
                        </td>
                     </tr>
                 </tbody>
