--- a/introduction.html
+++ b/introduction.html
@@ -124,6 +124,8 @@
                 <div id="contents">
                     <p>主讲人</p>
                     <p>(排名顺序不分先后)</p>
+                    <p class="organization">Yan Huang<br/></p>
+                    (University of Virginia)<br/><br/>
                     <p class="organization">Liqun Chen<br/></p>
                     (University of Surrey)<br/><br/>
                     <p class="organization">Bo Luo<br/></p>
@@ -134,16 +136,14 @@
                     (University of Electro Communications)<br/><br/>
                     <p class="organization">XiaoFeng Wang<br/></p>
                     (Indiana University Bloomington)<br/><br/>
-                    <p class="organization">Robert H.Deng<br/></p>
-                    (Singapore Management University)<br/><br/>
+                    <p class="organization">Huaxiong Wang <br/></p>
+                    (Nanyang Technological University)<br/><br/>
                     <p class="organization">Yaochu Jin<br/></p>
                     (University of Surrey)<br/><br/>
                     <p class="organization">QiuLiang Xu<br/></p>
                     (Shandong University)<br/><br/>
                     <p class="organization">ZhenFu Cao<br/></p>
                     ( East China Normal University )<br/><br/>
-                    <p class="organization">Fangguo Zhang<br/></p>
-                    (Sun Yat-sen University)<br/><br/>
                     <p class="organization">Lei Wang <br/></p>
                     (Shanghai Jiao Tong University)<br/><br/>
                     <p class="organization ">Fei Gao <br/></p>
