--- a/introduction.html
+++ b/introduction.html
@@ -136,7 +136,7 @@
                     (University of Electro Communications)<br/><br/>
                     <p class="organization">XiaoFeng Wang<br/></p>
                     (Indiana University Bloomington)<br/><br/>
-                    <p class="organization">Huaxiong Wang <br/></p>
+                    <p class="organization">Chaoping Xing<br/></p>
                     (Nanyang Technological University)<br/><br/>
                     <p class="organization">Yaochu Jin<br/></p>
                     (University of Surrey)<br/><br/>
