--- a/schedule.html
+++ b/schedule.html
@@ -67,31 +67,32 @@
 	}
 </style>
 <table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th>日期</th><th>时间</th><th>Title</th><th>报告嘉宾</th></tr></thead><tbody>
+<thead><tr class="tableizer-firstrow"><th>Data</th><th>Time</th><th>Title</th><th>ReportSpeaker</th></tr></thead><tbody>
  <tr><td>6月1日</td><td>8:45 - 9:00</td><td>Opening & Welcome</td><td>Zhan Qin & Bingsheng Zhang</td></tr>
  <tr><td>&nbsp;</td><td>9:00 - 9:50</td><td>TBD</td><td>Xiaofeng Wang</td></tr>
  <tr><td>&nbsp;</td><td>9:50 - 10:40</td><td>The Techniques of Secure Computation in Big Data</td><td>Zhenfu Cao</td></tr>
  <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>A brief introduction to secure multiparty computation</td><td>Chaoping Xing</td></tr>
- <tr><td>&nbsp;</td><td>12:00 - 2:00</td><td>Lunch</td><td>午餐（邵2-3桌）</td></tr>
- <tr><td>&nbsp;</td><td>2:00 - 2:50</td><td>Communication-efficient federated learning</td><td>Yaochu Jin</td></tr>
- <tr><td>&nbsp;</td><td>2:50 - 3:40</td><td>End-to-Same-End Encryption: Designing Modular, Efficient, and Portable Blind Cloud Storage</td><td>Qiang Tang</td></tr>
- <tr><td>&nbsp;</td><td>3:40 - 4:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>4:10 - 5:00</td><td>Practical Quantum Private Query</td><td>Fei Gao</td></tr>
- <tr><td>&nbsp;</td><td>6:00 - 8:00</td><td>Dinner</td><td>&nbsp;</td></tr>
+ <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
+ <tr><td>&nbsp;</td><td>14:00 - 14:50</td><td>Communication-efficient federated learning</td><td>Yaochu Jin</td></tr>
+ <tr><td>&nbsp;</td><td>14:50 - 15:40</td><td>End-to-Same-End Encryption: Designing Modular, Efficient, and Portable Blind Cloud Storage</td><td>Qiang Tang</td></tr>
+ <tr><td>&nbsp;</td><td>15:40 - 16:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
+ <tr><td>&nbsp;</td><td>16:10 - 17:00</td><td>Practical Quantum Private Query</td><td>Fei Gao</td></tr>
+ <tr><td>&nbsp;</td><td>18:00 - 20:00</td><td>Dinner</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
  <tr><td>6月2日</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>9:00 - 9:50</td><td>TPM and its host platform - a special case of two-party computation</td><td>Liqun Chen</td></tr>
  <tr><td>&nbsp;</td><td>9:50 - 10:40</td><td>Efficient Lattice-Based Zero-Knowledge Arguments with Standard Soundness: Construction and Applications</td><td>Qiuliang Xu</td></tr>
  <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>Cloud-assisted Secure Computing for IoT</td><td>Bo Luo</td></tr>
- <tr><td>&nbsp;</td><td>12:00 - 2:00</td><td>Lunch</td><td>午餐（邵2-3桌）</td></tr>
- <tr><td>&nbsp;</td><td>2:00 - 2:50</td><td>TBD</td><td>Kazuo Ohta</td></tr>
- <tr><td>&nbsp;</td><td>2:50 - 3:40</td><td>分布式共识机制</td><td>Lei Wang</td></tr>
- <tr><td>&nbsp;</td><td>3:40 - 4:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>4:10 - 5:00</td><td>TBD</td><td>Yan Huang</td></tr>
- <tr><td>&nbsp;</td><td>6:00 - 8:00</td><td>Dinner</td><td></td></tr>
+ <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
+ <tr><td>&nbsp;</td><td>14:00 - 14:50</td><td>TBD</td><td>Kazuo Ohta</td></tr>
+ <tr><td>&nbsp;</td><td>14:50 - 15:40</td><td>分布式共识机制</td><td>Lei Wang</td></tr>
+ <tr><td>&nbsp;</td><td>15:40 - 16:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
+ <tr><td>&nbsp;</td><td>16:10 - 17:00</td><td>TBD</td><td>Yan Huang</td></tr>
+ <tr><td>&nbsp;</td><td>18:00 - 20:00</td><td>Dinner</td><td></td></tr>
 </tbody></table>
+	    </br></br>
    <div id="up2">
             <a href="introduction.html">
                 <i class="fa fa-angle-double-up  fa-3x" style="color:rgb(81,125,207)" aria-hidden="true"></i>
