--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
                                     <li><a href="introduction.html">会议介绍</a></li>
+                                    <li><a href="schedule.html">日程安排</a></li>
                                     <li><a href="about.html">注册参会</a></li>
                                     <li><a href="#">ENGLISH</a></li>
                             </ul>
