--- a/schedule.html
+++ b/schedule.html
@@ -55,6 +55,7 @@
 		font-size: 20px;
 		border: 1px solid #CCC; 
 		font-family: Arial, Helvetica, sans-serif;
+		align:center;
 	} 
 	.tableizer-table td {
 		padding: 4px;
@@ -68,7 +69,7 @@
 	}
 </style>
 <table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th align="center">Data</th><th align="center">Time</th><th align="center">Report</th><th align="center">InvitedSpeaker</th></tr></thead><tbody>
+<thead><tr class="tableizer-firstrow"><th align="center">Data</th><th>Time</th><th>Report</th><th>InvitedSpeaker</th></tr></thead><tbody>
  <tr><td>6月1日</td><td> 8:45 - 9:00</td><td>Opening & Welcome</td><td>Zhan Qin & Bingsheng Zhang</td></tr>
  <tr><td>&nbsp;</td><td> 9:00 - 9:50</td><td>TBD</td><td>Xiaofeng Wang</td></tr>
  <tr><td>&nbsp;</td><td> 9:50 - 10:40</td><td>The Techniques of Secure Computation in Big Data</td><td>Zhenfu Cao</td></tr>
