--- a/schedule.html
+++ b/schedule.html
@@ -55,7 +55,6 @@
 		font-size: 20px;
 		border: 1px solid #CCC; 
 		font-family: Arial, Helvetica, sans-serif;
-		align:center;
 	} 
 	.tableizer-table td {
 		padding: 4px;
@@ -69,10 +68,10 @@
 	}
 </style>
 <table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th align="center">Data</th><th>Time</th><th>Report</th><th>InvitedSpeaker</th></tr></thead><tbody>
- <tr><td>6月1日</td><td> 8:45 - 9:00</td><td>Opening & Welcome</td><td>Zhan Qin & Bingsheng Zhang</td></tr>
- <tr><td>&nbsp;</td><td> 9:00 - 9:50</td><td>TBD</td><td>Xiaofeng Wang</td></tr>
- <tr><td>&nbsp;</td><td> 9:50 - 10:40</td><td>The Techniques of Secure Computation in Big Data</td><td>Zhenfu Cao</td></tr>
+<thead><tr class="tableizer-firstrow" align="center"><th align="center">Data</th><th>Time</th><th>Report</th><th>InvitedSpeaker</th></tr></thead><tbody>
+ <tr><td>6月1日</td><td>&nbsp;8:45 - 9:00</td><td>Opening & Welcome</td><td>Zhan Qin & Bingsheng Zhang</td></tr>
+ <tr><td>&nbsp;</td><td>&nbsp;9:00 - 9:50</td><td>TBD</td><td>Xiaofeng Wang</td></tr>
+ <tr><td>&nbsp;</td><td>&nbsp;9:50 - 10:40</td><td>The Techniques of Secure Computation in Big Data</td><td>Zhenfu Cao</td></tr>
  <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>A brief introduction to secure multiparty computation</td><td>Chaoping Xing</td></tr>
  <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
@@ -83,8 +82,8 @@
  <tr><td>&nbsp;</td><td>18:00 - 20:00</td><td>Dinner</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
  <tr><td>6月2日</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td> 9:00 - 9:50</td><td>TPM and its host platform - a special case of two-party computation</td><td>Liqun Chen</td></tr>
- <tr><td>&nbsp;</td><td> 9:50 - 10:40</td><td>Efficient Lattice-Based Zero-Knowledge Arguments with Standard Soundness: Construction and Applications</td><td>Qiuliang Xu</td></tr>
+ <tr><td>&nbsp;</td><td>&nbsp;9:00 - 9:50</td><td>TPM and its host platform - a special case of two-party computation</td><td>Liqun Chen</td></tr>
+ <tr><td>&nbsp;</td><td>&nbsp;9:50 - 10:40</td><td>Efficient Lattice-Based Zero-Knowledge Arguments with Standard Soundness: Construction and Applications</td><td>Qiuliang Xu</td></tr>
  <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>Cloud-assisted Secure Computing for IoT</td><td>Bo Luo</td></tr>
  <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
