--- a/schedule.html
+++ b/schedule.html
@@ -84,7 +84,8 @@
  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
  <tr><td>6月2日</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;9:00 - 9:50</td><td>TPM and its host platform - a special case of two-party computation</td><td>Liqun Chen</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;9:50 - 10:40</td><td>Efficient Lattice-Based Zero-Knowledge Arguments with Standard Soundness: Construction and Applications</td><td>Qiuliang Xu</td></tr>
+ <tr><td>&nbsp;</td><td>&nbsp;9:50 - 10:40</td><td>Leakage Deterring Authenticated Secret Sharing and Application to Secure Cloud Computing
+</td><td>Qiuliang Xu</td></tr>
  <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>14:50 - 15:40</td><td>分布式共识机制</td><td>Lei Wang</td></tr>
  <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
