--- a/schedule.html
+++ b/schedule.html
@@ -89,11 +89,11 @@
  <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>14:50 - 15:40</td><td>分布式共识机制</td><td>Lei Wang</td></tr>
  <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
- <tr><td>&nbsp;</td><td>14:00 - 14:50</td><td>TBD</td><td>Kazuo Ohta</td></tr>
+ <tr><td>&nbsp;</td><td>14:00 - 14:50</td><td>Card-based Majority Voting Protocols with Three Inputs Using Three Cards</td><td>Kazuo Ohta</td></tr>
  <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>Cloud-assisted Secure Computing for IoT</td><td>Bo Luo</td></tr>
 	
  <tr><td>&nbsp;</td><td>15:40 - 16:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>16:10 - 17:00</td><td>TBD</td><td>Yan Huang</td></tr>
+ <tr><td>&nbsp;</td><td>16:10 - 17:00</td><td>Efficient Secure String-Comparison from Custom Garbing</td><td>Yan Huang</td></tr>
  <tr><td>&nbsp;</td><td>18:00 - 20:00</td><td>Dinner</td><td></td></tr>
 </tbody></table>
 	    </br></br>
