--- a/schedule.html
+++ b/schedule.html
@@ -71,10 +71,10 @@
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>&nbsp;&nbsp;Data</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Time</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Report</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Invited&nbsp;Speaker</th></tr></thead><tbody>
  <tr><td>6月1日</td><td>&nbsp;8:45 - 9:00</td><td>Opening & Welcome</td><td>Zhan Qin & Bingsheng Zhang</td></tr>
- <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>A brief introduction to secure multiparty computation</td><td>Chaoping Xing</td></tr>
+ <tr><td>&nbsp;</td><td>&nbsp;9:00 - 9:50</td><td>A brief introduction to secure multiparty computation</td><td>Chaoping Xing</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;9:50 - 10:40</td><td>The Techniques of Secure Computation in Big Data</td><td>Zhenfu Cao</td></tr>
  <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;9:00 - 9:50</td><td>Into the New Privacy Era: Hardware Assisted Large-Scale Secure Computing</td><td>Xiaofeng Wang</td></tr>
+ <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>Into the New Privacy Era: Hardware Assisted Large-Scale Secure Computing</td><td>Xiaofeng Wang</td></tr>
  <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
  <tr><td>&nbsp;</td><td>14:00 - 14:50</td><td>Communication-efficient federated learning</td><td>Yaochu Jin</td></tr>
  <tr><td>&nbsp;</td><td>14:50 - 15:40</td><td>End-to-Same-End Encryption: Designing Modular, Efficient, and Portable Blind Cloud Storage</td><td>Qiang Tang</td></tr>
