--- a/schedule.html
+++ b/schedule.html
@@ -70,7 +70,9 @@
 </style>
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>&nbsp;&nbsp;Data</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Time</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Report</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Invited&nbsp;Speaker</th></tr></thead><tbody>
- <tr><td>6月1日</td><td>&nbsp;8:45 - 9:00</td><td>Opening & Welcome</td><td>Zhan Qin & Bingsheng Zhang</td></tr>
+ <tr><td>6月1日</td><td>&nbsp;7:30 - 8:30</td><td>论坛注册</td><td>&nbsp;</td></tr>
+ <tr><td>&nbsp;</td><td>&nbsp;8:30 - 8:45</td><td>论坛合影</td><td>&nbsp;</td></tr>
+ <tr><td>&nbsp;</td><td>&nbsp;8:45 - 9:00</td><td>Opening & Welcome</td><td>Zhan Qin & Bingsheng Zhang</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;9:00 - 9:50</td><td>A brief introduction to secure multiparty computation</td><td>Chaoping Xing</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;9:50 - 10:40</td><td>The Techniques of Secure Computation in Big Data</td><td>Zhenfu Cao</td></tr>
  <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
