--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                                     <li><a href="introduction.html">会议介绍</a></li>
                                     <li><a href="schedule.html">日程安排</a></li>
                                     <li><a href="about.html">注册参会</a></li>
+                                    <li><a href="SHDIpage.html">SHDI论坛入口</a></li>
                                     <li><a href="#">ENGLISH</a></li>
                             </ul>
                         </div>
