--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -36,6 +36,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
+                                    <li><a href="SHDIpage.html">SHDI论坛入口</a></li>
                                     <li><a href="introduction.html">会议介绍</a></li>
                                     <li><a href="schedule.html">日程安排</a></li>
                                     <li><a href="about.html">注册参会</a></li>
@@ -48,7 +49,7 @@
         <div id="introdution">
             <div class="introdution">
             <div id="theme">
-                <p style="text-indent:2em ">安全多方计算是实现用户隐私保护计算的重要途径，也是网络空间安全研究的热点。本届论坛旨在聚集国内外从事安全多方计算的一批学者，就安全多方计算的研究现状、未来及应用展开交流和讨论。论坛将邀请国内外12位从事安全多方计算的学者。每位邀请的报告人将做40分钟的论坛邀请报告。<br/>
+                <p style="text-indent:2em ">随着网络空间安全、人工智能和云计算等领域的快速发展，学术界和工业界构造了大量的理论和应用方案；同时， 工业界和用户对相关落地实现系统的需求也在不断快速增长；因此， 必须解决相关方案和算法的软件和硬件实现问题；而软件设计理论的逐渐成熟和硬件设计与实现技术的快速发展和产品化，为解决上述问题提供了良好的基础和契机<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;报告的主题主要涉及以下几个方面：<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;(1) 安全多方计算的理论研究及其进展<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;(2) 后量子时代的安全多方计算理论<br/>
