--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -185,7 +185,7 @@
         </div>
        
     </div>
-    <script>
+<!--     <script>
         let up1=document.getElementById('up1'),
             down2=document.getElementById('down2');
             //跨浏览器兼容事件处理器
@@ -213,6 +213,6 @@
         
         addHandler(down2,"mouseout",()=>down2.style.border="");
         window.sr = ScrollReveal().reveal('#introdution,#speaker,#contents,#button');
-    </script>
+    </script> -->
 </body>
 </html>
