--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -48,77 +48,13 @@
         <div id="introdution">
             <div class="introdution">
             <div id="theme">
-                <p style="text-indent:2em ">随着网络空间安全、人工智能和云计算等领域的快速发展，学术界和工业界构造了大量的理论和应用方案；同时， 工业界和用户对相关落地实现系统的需求也在不断快速增长；因此， 必须解决相关方案和算法的软件和硬件实现问题；而软件设计理论的逐渐成熟和硬件设计与实现技术的快速发展和产品化，为解决上述问题提供了良好的基础和契机<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;报告的主题主要涉及以下几个方面：<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;(1) 安全多方计算的理论研究及其进展<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;(2) 后量子时代的安全多方计算理论<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;(3) 量子安全多方计算<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;(4) 安全多方计算的应用<br/>
+                <p style="text-indent:2em ">随着网络空间安全、人工智能和云计算等领域的快速发展，学术界和工业界构造了大量的理论和应用方案；同时，工业界和用户对相关落地实现系统的需求也在不断快速增长；因此，必须解决相关方案和算法的软件和硬件实现问题；而软件设计理论的逐渐成熟和硬件设计与实现技术的快速发展和产品化，为解决上述问题提供了良好的基础和契机。<br/>
+                    本届论坛将围绕着算法，特别密码算法的软硬件结构设计与实现展开探讨和交流。论坛将于2019年9月28日-2019年09月29日在桂林举办。论坛邀请了来自香港城市大学、深圳纽创信安科技公司、清华大学、中科院信息工程研究所、武汉大学、杭州加速云科技公司、Intel中国有限公司等多位从事软硬件算法设计与实现的专家，将就相关的问题给出10个特邀报告。热烈欢迎国内外高校、研究所、工业界的老师/公司同仁和研究生等参加论坛，对密码算法软硬件实现的相关问题进行交流和讨论。
+                    &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
             </div> 
             </div>
             <div id="speaker">
-                <!--<table>
-                <tbody>
-                    <tr>
-                    <td></td>
-                    <td >主讲人</td>
-                    <td></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2"></td>
-                    </tr>
-                    <tr>
-                        <td>Liqun Chen</td>
-                    <td>( University of Surrey )</td>
-                    </tr>
-                <tr>
-                    <td>Bo Luo </td>
-                    <td>( University of Kansas )</td>
-                </tr>
-                <tr>
-                    <td>Qiang Tang</td>
-                    <td>( New Jersey Institute of Technology )</td>
-                </tr>
-                <tr>
-                    <td>Kazuo Otha</td>
-                    <td>( University of Electro Communications )</td> 
-                </tr>
-                <tr>
-                    <td>XiaoFeng Wang</td>
-                    <td>( Indiana University Bloomington )</td>
-                </tr>
-                <tr>
-                    <td>Robert H.Deng </td>
-                    <td>( Singapore Management University )</td>
-                </tr>
-                <tr>
-                    <td>Yaochu Jin</td>
-                    <td>( University of Surrey )</td>
-                </tr>
-                <tr>
-                    <td>QiuLiang Xu</td>
-                    <td>( Shandong University )</td>
-                </tr>
-                <tr>
-                    <td>ZhenFu Cao </td>
-                    <td>( East China Normal University )</td>
-                </tr>
-                <tr>
-                    <td>Fangguo Zhang</td>
-                    <td>( Sun Yat-sen University )</td>
-                </tr>
-                <tr>
-                    <td>Lei Wang </td>
-                    <td>( Shanghai Jiao Tong University )</td>
-                </tr>
-                <tr id="last-tr">
-                    <td>Fei Gao </td>
-                    <td>( Beijing University of Posts and Telecommunications )</td>
-                </tr>
-                </tbody>
-                
-                </table>-->
             </div> 
             <div class="main2">
             <div id="main2">
