--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -59,49 +59,10 @@
             <div class="main2">
             <div id="main2">
                 <div id="contents">
-                    <p>主讲人</p>
-                    <p>(排名顺序不分先后)</p>
-                    <p class="organization">Yan Huang<br/></p>
-                    (University of Virginia)<br/><br/>
-                    <p class="organization">Liqun Chen<br/></p>
-                    (University of Surrey)<br/><br/>
-                    <p class="organization">Bo Luo<br/></p>
-                    (University of Kansas)<br/><br/>
-                    <p class="organization">Qiang Tang<br/></p>
-                    (New Jersey Institute of Technology)<br/><br/>
-                    <p class="organization">kazuo Otha<br/></p>
-                    (University of Electro Communications)<br/><br/>
-                    <p class="organization">XiaoFeng Wang<br/></p>
-                    (Indiana University Bloomington)<br/><br/>
-                    <p class="organization">Chaoping Xing<br/></p>
-                    (Nanyang Technological University)<br/><br/>
-                    <p class="organization">Yaochu Jin<br/></p>
-                    (University of Surrey)<br/><br/>
-                    <p class="organization">QiuLiang Xu<br/></p>
-                    (Shandong University)<br/><br/>
-                    <p class="organization">ZhenFu Cao<br/></p>
-                    ( East China Normal University )<br/><br/>
-                    <p class="organization">Lei Wang <br/></p>
-                    (Shanghai Jiao Tong University)<br/><br/>
-                    <p class="organization ">Fei Gao <br/></p>
-                    (Beijing University of Posts and Telecommunications)<br/>
-                    <br/>
-                    <br/><br/>
-                    <p class="organization">筹备委员会<br/></p>
-                    任奎 王杰 陈克非 林东岱<br/><br/>
-                    <p class="organization">论坛主席<br/></p>
-                    秦湛 张秉晟<br/><br/>
-                    <p class="organization">论坛组织和筹备主席<br/></p>
-                    蒋林智<br/><br/>
-                    <p class="organization">论坛承办单位<br/></p>
-                    浙江大学 网络空间安全研究中心<br/><br/>
-                    <p class="organization">论坛协办单位<br/></p>
-                    University of Surrey SSG <br/>
-                    中国密码学会 密码数学理论专业委员会<br/>
-                    中国保密学会 隐私保护专委会<br/><br/>
-                    </p>
-                    <p class="organization">会议举办地点<br/></p>
-                    浙江大学邵逸夫科学馆<br/>
+                    <p class="organization">论坛组委会(排名不分先后顺序)<br/></p>
+                    张景中 刘建伟 马建峰 荆继武 唐绍华 张玉清 冯荣权 孔凡玉 陈光喜<br/><br/>
+                    <p class="organization">论坛组织和筹备委员会<br/></p>
+                    蒋林智（University of Surrey）丁勇(桂林电子科技大学)<br/><br/>
                     <a href="https://j.map.baidu.com/b0ZKP">
                         <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
                     </a>
