--- a/SHDIplan.html
+++ b/SHDIplan.html
@@ -37,9 +37,9 @@
                             <ul class="nav navbar-nav navbar-right">
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
-                                    <li><a href="introduction.html">会议介绍</a></li>
-				    <li><a href="schedule.html">日程安排</a></li>
-                                    <li><a href="about.html">注册参会</a></li>
+                                    <li><a href="SHDIpage.html">SHDI论坛介绍</a></li>
+                                    <li><a href="SHDIplan.html">SHDI论坛日程</a></li>
+                                    <li><a href="SHDIregister.html">SHDI论坛注册</a></li>
                                     <li><a href="#">ENGLISH</a></li>
                             </ul>
                         </div>
@@ -69,8 +69,9 @@
 	}
 </style>
 <table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th>&nbsp;&nbsp;Data</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Time</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Report</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Invited&nbsp;Speaker</th></tr></thead><tbody>
- <tr><td>6月1日</td><td>&nbsp;7:30 - 8:30</td><td>论坛注册</td><td>&nbsp;</td></tr>
+<thead><tr class="tableizer-firstrow"><th>&nbsp;&nbsp;日期</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;时间</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;报告</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Invited&nbsp;报告人</th></tr></thead><tbody>
+ <tr><td>9月27日</td><td>&nbsp;14:30 - 20:00</td><td>论坛注册及报到（桂林百悦大酒店大堂）</td><td>&nbsp;</td></tr>
+ <tr>9月28日</tr>
  <tr><td>&nbsp;</td><td>&nbsp;8:30 - 8:45</td><td>论坛合影</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;8:45 - 9:00</td><td>Opening & Welcome</td><td>Zhan Qin & Bingsheng Zhang</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;9:00 - 9:50</td><td>A brief introduction to secure multiparty computation</td><td>Chaoping Xing</td></tr>
