--- a/SHDIregister.html
+++ b/SHDIregister.html
@@ -37,9 +37,9 @@
                             <ul class="nav navbar-nav navbar-right">
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
-                                    <li><a href="introduction.html">会议介绍</a></li>
-                                    <li><a href="schedule.html">日程安排</a></li>
-                                    <li><a href="about.html">注册参会</a></li>
+                                    <li><a href="SHDIpage.html">SHDI论坛介绍</a></li>
+                                    <li><a href="SHDIplan.html">SHDI论坛日程</a></li>
+                                    <li><a href="SHDIregister.html">SHDI论坛注册</a></li>
                                     <li><a href="#">ENGLISH</a></li>
                             </ul>
                         </div>
@@ -53,7 +53,7 @@
                 <caption>注册信息</caption>
                 <tbody>
                     <tr >
-                        <td >注册费用：</td><td>1500元/人，自行参会人员食宿自理。可通过网银转账、银行汇款方式缴纳。</td>
+                        <td >注册费用：</td><td>1500元/人，参会老师和相关人员交通和食宿自理。</td>
                     </tr>
                     
 
@@ -62,78 +62,54 @@
                         <td>(转账时请注明单位与姓名)</td>
                     </tr>
                     <tr>
-                        <td>单位名称：</td>
-                        <td>杭州灵峰会议服务有限公司</td>
+                        <td>户名：广西臻悦文化传媒有限公司</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>税 &nbsp; &nbsp;&nbsp;&nbsp;号：</td>
-                        <td>9133 0104 7368 6237 57</td>
+                        <td>6600 1109 9298 4000 10</td>
                     </tr>
                     <tr>
-                        <td>开户银行：</td><td>中国银行浙大支行</td>
+                        <td>开户银行：</td><td>桂林银行股份有限公司民主路支行</td>
                     </tr>
-                    <tr>
+<!--                     <tr>
                         <td>账 &nbsp; &nbsp;&nbsp;&nbsp; 号：</td>
                         <td>377 958 327 225</td>
-                    </tr>
-                    <tr>
+                    </tr> -->
+<!--                     <tr>
                         <td colspan="2">注：请参会人员填写发票抬头和税号，打款时备注此会议名称，财务处会开具纸质发票，在报到的时候发给参会人员。已注册的老师，请联系齐老师，咨询发票开取事务。<a href="https://www.wjx.top/jq/36776244.aspx">请点击进入注册</a>。</td>
-                    </tr>
-                    <tr style="text-align:center">
-                       <td colspan="2">
-                           <br>
-                        <img src="./image/zhuce.png"><br>
-                           <br>
-                        也可用手机扫描二维码进行注册
-                       </td>
+                    </tr> -->
+                    <tr>
+                        <td colspan="2">注：缴费时请您注明以下信息（即单位、姓名和单位税号）</td>
                     </tr>
                 </tbody>
                 </table>
                 <table class="table">
                 <caption>住宿信息</caption>
                 <tbody >
-                    <tr><td style="width: 50%;text-indent: 2em">本次论坛为所有邀请报告人提供住宿以及往返机票/高铁票报销。所邀请报告人将居住在浙江世贸
-                            <a href="https://www.google.cn/maps/place/Zhejiang+Narada+Grand+Hotel/@30.265754,120.1384123,17z/data=!3m1!4b1!4m5!3m4!1s0x344b628dca7f2211:0x17322478b872549!8m2!3d30.265754!4d120.140601
-                            ">君澜大饭店</a>，其他自行参会者可以选择
-                        <a href="https://www.google.cn/maps/place/Yuquan+Hotel/@30.25931,120.1233353,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e861cb5fd3:0xd27d4eae06cbaa12!8m2!3d30.25931!4d120.125524
-                        ">玉泉饭店</a>
-                        和
-                        <a href="https://www.google.cn/maps/place/%E7%81%B5%E5%B3%B0%E5%B1%B1%E5%BA%84/@30.260165,120.1236463,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e8ec4d88f5:0x893252db7ac4d6c3!8m2!3d30.260165!4d120.125835
-                       ">灵峰山庄</a>。
+                    <tr><td style="width: 50%;text-indent: 2em">论坛住宿酒店：桂林百悦大酒店（桂林市金鸡岭路 1 号）。
                     </td>
                     </tr>
                 </tbody>
                 </table>
-                <!--<div class="info" style="position: relative;display: table-cell;
-                vertical-align: middle;
-                margin: auto;
-                width: 50%;height: 30%"> 
-                        本次论坛为所有邀请报告人提供住宿以及往返机票/高铁票报销。所邀请报告人将居住在浙江世贸
-                        <a href="https://www.google.cn/maps/place/Zhejiang+Narada+Grand+Hotel/@30.265754,120.1384123,17z/data=!3m1!4b1!4m5!3m4!1s0x344b628dca7f2211:0x17322478b872549!8m2!3d30.265754!4d120.140601
-                        ">君澜大饭店</a>，其他自行参会者可以选择
-                        <a href="https://www.google.cn/maps/place/Yuquan+Hotel/@30.25931,120.1233353,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e861cb5fd3:0xd27d4eae06cbaa12!8m2!3d30.25931!4d120.125524
-                        ">玉泉饭店</a>
-                        和
-                        <a href="https://www.google.cn/maps/place/%E7%81%B5%E5%B3%B0%E5%B1%B1%E5%BA%84/@30.260165,120.1236463,17z/data=!3m1!4b1!4m5!3m4!1s0x344b62e8ec4d88f5:0x893252db7ac4d6c3!8m2!3d30.260165!4d120.125835
-                       ">灵峰山庄</a>。
-                </div>-->
+
                 <table class="table table3">
                     <caption>
-                            论坛注册联系方式
+                            论坛合作联系方式
                     </caption>
                     <tbody >
                         <tr>
-                            <td style="width: 40%">论坛注册联系人：</td>
-                            <td>齐老师</td>
+                            <td style="width: 40%">论坛合作联系人：</td>
+                            <td>蒋林智</td>
                         </tr>
-                        <tr>
+<!--                         <tr>
                             <td style="width: 50%">办公室电话：</td>
                             <td>0571-87951559</td>
                         </tr>
                         <tr>
                             <td style="width: 40%">论坛注册邮箱：</td>
                             <td>Tiffanyqi371@zju.edu.cn</td>
-                        </tr>
+                        </tr> -->
                     </tbody>
                 </tbody>
             </table>
