--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -63,6 +63,10 @@
                     张景中    刘建伟    马建峰    荆继武    唐绍华    张玉清    冯荣权    张焕国    孔凡玉    陈光喜<br/><br/>
                     <p class="organization">论坛组织<br/></p>
                     蒋林智（University of Surrey）  丁勇（桂林电子科技大学）<br/><br/>
+                    <p class="organization">论坛承办单位<br/></p>
+                    桂林电子科技大学 计算机与信息安全学院<br/><br/>
+                    <p class="organization">论坛地点<br/></p>
+                    桂林电子科技大学金鸡岭校区 十教516 室（桂林市金鸡岭路1号）<br/><br/>
                     <a href="https://j.map.baidu.com/b0ZKP">
                         <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
                     </a>
