--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -37,14 +37,21 @@
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
                                     <li class="submenu">
-                                           <a href="SHDIpage.html">SHDI论坛介绍</a>
+                                           <a href="SHDIpage.html">SHDI论坛入口</a>
                                              <ul class="sub">
-                                                 <li><a href="SHDIplan.html">SHDI论坛日程</a></li>
-                                                 <li><a href="SHDIregister.html">SHDI论坛注册</a></li>
+                                                 <li><a href="SHDIpage.html">论坛介绍</a></li>
+                                                 <li><a href="SHDIplan.html">论坛日程</a></li>
+                                                 <li><a href="SHDIregister.html">论坛注册</a></li>
                                              </ul>
                                     </li>
-                                    <li><a href="SHDIplan.html">SHDI论坛日程</a></li>
-                                    <li><a href="SHDIregister.html">SHDI论坛注册</a></li>
+                                    <li class="submenu">
+                                           <a href="index.html">安全多方计算论坛</a>
+                                             <ul class="sub">
+                                                 <li><a href="SHDIpage.html">论坛介绍</a></li>
+                                                 <li><a href="SHDIplan.html">论坛日程</a></li>
+                                                 <li><a href="SHDIregister.html">论坛注册</a></li>
+                                             </ul>
+                                    </li>
                                     <li><a href="#">ENGLISH</a></li>
                             </ul>
                         </div>
