--- a/index.html
+++ b/index.html
@@ -84,15 +84,23 @@
         </header>        
         <div class="container">
             <div id="main">
-                <p>安全多方计算国际论坛-2019</p>
+                <p>算法软硬件架构设计与实现论坛日程-2019</p>
+                <p>[2019年9月28日 - 2019年9月29日]</p>
+                <p>桂林市金鸡路1号·桂林电子科技大学金鸡岭校区<br/>10教516室</p>
+                <a href="https://j.map.baidu.com/b0ZKP">
+                    <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
+                </a>
+                
+                
+<!--                 <p>安全多方计算国际论坛-2019</p>
                 <p>[1/6/2019 - 2/6/2019]</p>
                 <p>浙江省杭州市浙大路38号·浙江大学玉泉校区<br/>邵逸夫科学馆</p>
                 <a href="https://j.map.baidu.com/b0ZKP">
                     <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
-                </a>
+                </a> -->
             </div>
             <div id="icon-down" class="icon-down">
-                <a id="down"   href="introduction.html">
+                <a id="down"   href="SHDIpage.html">
                     <i class="fa fa-angle-double-down  fa-3x" style="color:rgb(81,125,207)" aria-hidden="true"></i>
                 </a>
             </div>
